--- a/p4/index.html
+++ b/p4/index.html
@@ -45,9 +45,9 @@
 				<label for="fontName">Escoja una fuente</label>
 				<select id="fontName" name="fontName" class="form-control">
 						<option value="">Seleccione una fuente</option>
-						<option value="Arial">Arial</option>
+						<option value="Times New Roman">Times New Roman</option>
 						<option value="Helvetica">Helvetica</option>
-						<option value="Comic Sans">Comic Sans</option>
+						<option value="Courier New">Courier New</option>
 					</select>
 				</div>
 			</div>
