--- a/p4/index.html
+++ b/p4/index.html
@@ -12,7 +12,17 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-			<h1>Pregunta 4<h1>
+			<h1>Pregunta 4</h1>
+			<code>
+				Se pide crear una página que permita al usuario poner texto y darle estilo, para eso tendrá un textarea donde podrá escribir, todo lo que escriba debe aparecer como texto a la derecha.<br>
+				Además dispondrá de los siguientes controles que modificarán las propiedades del texto a la derecha.<br>
+			<br>
+			-	Un	selector	de	colores.<br>
+			-	Un	input	que	permita	definir	el	tamaño	del	texto<br>
+			-	Un	input	que	permita	definir	la	tipografía<br>
+
+			</code>
+
 		</div>
 		<div class="col-md-6">
 			<h2> Input </h2>
